# Controller

./: .env.example  .gitignore  Cargo.toml  DISTRIBUTION.md  LICENSE  README.md  build.rs
.github/: copilot-instructions.md
config/: actions.toml  commands.toml  hotkeys.toml  llm.toml
docs/: ARCHITECTURE.md  GUI_DESIGN_AUDIT.md
scripts/linux/: build.sh  intelliboard.desktop
src/: lib.rs  main.rs  startup.rs  ui.rs  ui_backup.rs
src/api/: client.rs
src/core/: actions.rs  clipboard.rs  clipboard_listener.rs  config.rs  config_watcher.rs  detector.rs  events.rs  graph_server.rs  ipc_messages.rs  ipc_server.rs  memory.rs  memory_store.rs  mod.rs  process_manager.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/ui/: hotkey_config.rs  memory_graph.rs  theme.rs
