[package]
name = "Controller"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
arboard = "3.2"
rdev = { version = "0.5", features = ["unstable_grab"] }
regex = "1.10"
anyhow = "1.0"
eframe = "0.27"
egui = "0.27"

log = "0.4"
env_logger = "0.11"
flexi_logger = "0.27"
config = "0.13"
clap = { version = "4.4", features = ["derive"] }
single-instance = "0.3"
once_cell = "1.18"
chrono = { version = "0.4", features = ["serde"] }
tray-icon = "0.14"
tao = "0.28" # Needed for event loop if we weren't using eframe, but eframe uses winit. 
# We might need to be careful about event loop conflicts, but tray-icon is designed to be independent.
image = "0.24"
toml = "0.9.10"
clipboard-master = "4.0.0"
dotenv = "0.15.0"
dirs = "4"
uuid = { version = "1.6", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }
windows-service = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.22"

[features]
default = ["system-clipboard"]
system-clipboard = []
debug-mode = []
